Updating Bootes to make it the main catalogue

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -64,7 +64,7 @@
     "# Field                suffix\n",
     "['AKARI-NEP',          '20180215' ],\n",
     "['AKARI-SEP',          '20180221' ],\n",
-    "['Bootes_Brown',       '20180509' ], #There are two versions Brown and HELP - we use Brown\n",
+    "['Bootes',             'brown_20180509' ], #There are two versions Brown and HELP - we use Brown\n",
     "['CDFS-SWIRE',         '20180221' ],\n",
     "['COSMOS',             '20180313' ],\n",
     "['EGS',                '20180501' ],\n",
