creating second help_id column on cosmos to solve id inconsistencies

--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -993,7 +993,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We now make a second help_id column using only the new naming convention but keeping the old column to permit joining in the old products"
    ]
@@ -1002,7 +1005,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1015,7 +1020,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2326,7 +2333,7 @@
    "source": [
     "master_catalogue[id_names].write(\n",
     "    \"{}/master_list_cross_ident_cosmos{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
-    "id_names.remove('help_id')\n",
+    "id_names.remove('help_id', 'old_help_id')\n",
     "master_catalogue.remove_columns(id_names)"
    ]
   },
@@ -2378,7 +2385,7 @@
    },
    "outputs": [],
    "source": [
-    "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
+    "columns = [\"help_id\", \"old_help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
     "\n",
     "bands = [column[5:] for column in master_catalogue.colnames if 'f_ap' in column]\n",
     "for band in bands:\n",
@@ -2404,7 +2411,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
