REworking help ids on COSMOS

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "SUFFIX='20180313'\n",
+    "SUFFIX='20180516'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
@@ -106,7 +106,8 @@
     "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24']\n",
     "\n",
     "xid_mips24['help_id'] = xid_mips24['help_id'].astype('S27')\n",
-    "xid_mips24['help_id'] = Column(np.char.strip(xid_mips24['help_id']))"
+    "xid_mips24['help_id'] = Column(np.char.strip(xid_mips24['help_id']))\n",
+    "xid_mips24['help_id'].name = 'old_help_id'"
    ]
   },
   {
@@ -152,7 +153,8 @@
     "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
     "                    'f_pacs_red', 'ferr_pacs_red',\n",
-    "                    ]\n"
+    "                    ]\n",
+    "xid_pacs['help_id'].name = 'old_help_id'"
    ]
   },
   {
@@ -207,7 +209,8 @@
     "xid_spire = xid_spire['help_id',\n",
     "                      'f_spire_250', 'ferr_spire_250',\n",
     "                      'f_spire_350', 'ferr_spire_350',\n",
-    "                      'f_spire_500', 'ferr_spire_500']"
+    "                      'f_spire_500', 'ferr_spire_500']\n",
+    "xid_spire['help_id'].name = 'old_help_id'"
    ]
   },
   {
@@ -228,6 +231,7 @@
     "photoz = photoz['help_id', 'z1_median']\n",
     "photoz['help_id'] = photoz['help_id'].astype('S27')\n",
     "photoz['help_id'] = Column(np.char.strip(photoz['help_id']))\n",
+    "photoz['help_id'].name = 'old_help_id'\n",
     "\n",
     "photoz['z1_median'].name = 'redshift'\n",
     "\n",
@@ -364,7 +368,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -385,7 +389,7 @@
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "    columns = ['help_id', 'old_help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
@@ -403,7 +407,7 @@
     "    print( set(columns) - set(merged_table.colnames))\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/COSMOS_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/COSMOS_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -435,11 +439,12 @@
     "    cigale['id'].name = \"help_id\"\n",
     "    \n",
     "    ##################REVERT ids###################\n",
-    "    old_id_table = Table.read(\"../../dmu28/dmu28_COSMOS/data/master_list_help_cigale_cross_ident_cosmos_20180313.fits\")\n",
+    "    #FROM BEFORE I UPDATED IDS IN ML\n",
+    "    #old_id_table = Table.read(\"../../dmu28/dmu28_COSMOS/data/master_list_help_cigale_cross_ident_cosmos_20180313.fits\")\n",
     "    \n",
-    "    cigale = join(cigale, old_id_table, join_type='left')\n",
-    "    cigale.remove_columns('help_id')\n",
-    "    cigale['main_help_id'].name = 'help_id'\n",
+    "    #cigale = join(cigale, old_id_table, join_type='left')\n",
+    "    #cigale.remove_columns('help_id')\n",
+    "    #cigale['main_help_id'].name = 'help_id'\n",
     "    ##################REVERT ids###################\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -554,7 +559,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
+    "    columns = ['help_id', 'old_help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
     "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
