Working on bootes compromise

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -75,7 +75,7 @@
     "['AKARI-SEP',          '20180221' ],\n",
     "['Bootes',             'brown_20180509' ], #There are two versions Brown and HELP - we use Brown\n",
     "['CDFS-SWIRE',         '20180221' ],\n",
-    "['COSMOS',             '20180313' ],\n",
+    "['COSMOS',             '20180516' ],\n",
     "['EGS',                '20180501' ],\n",
     "['ELAIS-N1',           '20171016' ],\n",
     "['ELAIS-N2',           '20180218' ],\n",
